<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/backbutton"
            android:contentDescription="@string/back"
            android:scaleType="centerInside" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/lottery_information"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_guidelines_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lottery_guidelines"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_guidelines_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lottery_guidelines_text"
        android:textColor="#333333"
        android:textSize="15sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_guidelines_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
